<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_addtask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.ulpgc.eite.clean.mvp.sample.addTask.AddTaskView"
    tools:showIn="@layout/activity_addtask">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
      >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subject"
            android:textColor="#2c3e50"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/subjectLabel"/>


        <!--<EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:id="@+id/subject"/>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select a subject"
            android:textColorHint="#2c3e50"
            android:layout_alignParentStart="true"
            />-->

        <Spinner
            android:id="@+id/subject_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textColor="#2c3e50"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/titleLabel"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/title"
            android:hint="Title"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textColor="#2c3e50"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/descriptionLabel"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/description"
            android:hint="Description"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>



     <!--   <DatePicker
            android:id="@+id/date"
            android:layout_width="460dp"
            android:layout_height="96dp"
            android:layout_weight="617.68"/>-->



        <!--<EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="73dp"
            android:ems="10"
            android:inputType="date"/>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="Select date"
                android:textColor="#ecf0f1"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/selectTimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="Select time"
                android:textColor="#ecf0f1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:text="08:00"
                android:textColor="#000000"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/addTaskBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Add Task"
            android:textColor="#ecf0f1"/>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>

