<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.ulpgc.eite.clean.mvp.masterdetail.detail.DetailView">
    <item
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="spinner"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuToDo"
                android:icon="@android:drawable/checkbox_off_background"
                android:title="To Do" />
            <item
                android:id="@+id/menuDone"
                android:icon="@android:drawable/checkbox_on_background"
                android:title="Done" />

        </menu>
    </item>


</menu>
