<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_listToDo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.ulpgc.eite.clean.mvp.sample.listToDoMaster.ListToDoViewMaster"
    tools:showIn="@layout/activity_listtodo">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:text="Add new tasks to do"
        android:textColorHint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="20dp"
        android:id="@+id/textWhenIsEmpty"/>

    <include layout="@layout/item_recycler_list"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="31dp"
        android:clickable="true"
        app:backgroundTint="@color/flatBlue"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/floatingDeleteButton"
        android:layout_alignTop="@+id/floatingDeleteButton"
        android:clickable="true"
        app:backgroundTint="@color/flatBlue"
        app:fabSize="normal"
        app:srcCompat="@drawable/plus_white_symbol" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/floatingAddButton"
        android:layout_marginRight="2pt"
        android:layout_toLeftOf="@id/floatingAddButton"
        android:clickable="true"
        app:backgroundTint="@color/flatBlue"
        app:fabSize="normal"
        app:srcCompat="@drawable/checked" />

</RelativeLayout>
